--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
         </ul>
         <!-- 搜尋bar -->
           <form>
-            <input type="text" name="search" placeholder="Search..">
+            <input placeholder="search..." class="searchinput">
+            <button class="butsearch"><img src="assets/icon/search.jpg"></button>
           </form>
 
           </div>
@@ -204,6 +205,7 @@
         </tr>
       </table>
       <h6>design by CYCU_IM_1st </h6>
+      <h6 class="countpeople">瀏覽人數：12345人次</h6>
     </footer>
 <!--  -->
 
