--- a/production-1.html
+++ b/production-1.html
@@ -130,7 +130,8 @@
         </ul>
         <!-- 搜尋bar -->
           <form>
-            <input type="text" name="search" placeholder="Search..">
+            <input placeholder="search..." class="searchinput">
+            <button class="butsearch"><img src="assets/icon/search.jpg"></button>
           </form>
 
           </div>
@@ -299,17 +300,35 @@
 	<h6>商品評價:</h6>
 		<div class="star-rating">
 		  <input type="radio" id="5-stars" name="rating" value="5" />
-		  <label for="5-stars" class="star">&#9733;</label>
+		  <label for="5-stars" class="star">&#9733;</label> 
+
 		  <input type="radio" id="4-stars" name="rating" value="4" />
 		  <label for="4-stars" class="star">&#9733;</label>
+
 		  <input type="radio" id="3-stars" name="rating" value="3" />
 		  <label for="3-stars" class="star">&#9733;</label>
+
 		  <input type="radio" id="2-stars" name="rating" value="2" />
 		  <label for="2-stars" class="star">&#9733;</label>
+
 		  <input type="radio" id="1-star" name="rating" value="1" />
 		  <label for="1-star" class="star">&#9733;</label>
 		</div>
 <!-- **************************************** -->
+    <hr>
+    <div class="coll">
+      <h7>我是暱稱1</h7>
+      <p>我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言</p>
+      <label class="starpost">&#9733;&#9733;&#9733;&#9733;&#9733;</label>
+    </div>
+
+    <div class="coll">
+      <h7>我是暱稱2</h7>
+      <p>我是留言1232312423553453454464646466</p>
+      <label class="starpost">&#9733;&#9733;&#9733;</label>
+    </div>
+
+
 		</div>
 
 
@@ -328,6 +347,8 @@
 		  evt.currentTarget.className += " active";
 		}
 		</script>
+
+
 
 
 		
