--- a/production-2.html
+++ b/production-2.html
@@ -130,7 +130,8 @@
         </ul>
         <!-- 搜尋bar -->
           <form>
-            <input type="text" name="search" placeholder="Search..">
+            <input placeholder="search..." class="searchinput">
+            <button class="butsearch"><img src="assets/icon/search.jpg"></button>
           </form>
 
           </div>
@@ -300,6 +301,18 @@
 		  <label for="1-star" class="star">&#9733;</label>
 		</div>
 <!-- **************************************** -->
+    <hr>
+    <div class="coll">
+      <h7>我是暱稱1</h7>
+      <p>我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言我是留言</p>
+      <label class="starpost">&#9733;&#9733;&#9733;&#9733;&#9733;</label>
+    </div>
+
+    <div class="coll">
+      <h7>我是暱稱2</h7>
+      <p>我是留言1232312423553453454464646466</p>
+      <label class="starpost">&#9733;&#9733;&#9733;</label>
+    </div>
 		
 		</div>
 
