--- a/buy.html
+++ b/buy.html
@@ -132,7 +132,8 @@
         </ul>
         <!-- 搜尋bar -->
           <form>
-            <input type="text" name="search" placeholder="Search..">
+            <input placeholder="search..." class="searchinput">
+            <button class="butsearch"><img src="assets/icon/search.jpg"></button>
           </form>
 
           </div>
