--- a/hope.html
+++ b/hope.html
@@ -132,7 +132,8 @@
         </ul>
         <!-- 搜尋bar -->
           <form>
-            <input type="text" name="search" placeholder="Search..">
+            <input placeholder="search..." class="searchinput">
+            <button class="butsearch"><img src="assets/icon/search.jpg"></button>
           </form>
 
           </div>
@@ -160,6 +161,7 @@
           <th>數量</th>
           <th>單價</th>
           <th>金額（元）</th>
+          <th>庫存</th>
           <th>取消</th>
         </tr>
      </thead>
@@ -183,6 +185,8 @@
           </td>
           <td>{{item.price}}</td>
           <td>{{item.price*item.num}}</td>
+          <!--這行是庫存--> 
+          <td>20</td> 
           <td><a href="javascript:;" @click="deleteProduct(index)">刪除</a></td>
         </tr>
         </tbody>
